# PyRepScan

./: .gitignore  Cargo.toml  README.md  cortex.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml  pythonpackage.yml
benchmarks/: gitleaks.sh  pyrepscan_bench.py
pyrepscan/: __init__.py  pyrepscan.pyi
src/: git_repository_scanner.cpp  git_repository_scanner.rs  lib.rs  rules_manager.hpp  rules_manager.rs
tests/: test_git_repository_scanner.py  test_pyrepscan.py  test_rules_manager.py
