[package]
name = "pyrepscan"
version = "0.10.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "A Git Repository Secrets Scanner written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pyrepscan"
homepage = "https://github.com/intsights/pyrepscan"
license = "MIT"
keywords = [
    "git",
    "secrets",
    "scanner",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[lib]
name = "pyrepscan"
crate-type = ["cdylib"]

[dependencies]
regex = "1"
chrono = "0.4"
num_cpus = "1"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-utils = "0.8"

[dependencies.libgit2-sys]
version = "0.12"
features = ["https"]

[dependencies.git2]
version = "0.13"
features = ["vendored-openssl"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
