[package]
name = "pyrepscan"
version = "0.12.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "A Git Repository Secrets Scanner written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pyrepscan"
homepage = "https://github.com/intsights/pyrepscan"
license = "MIT"
keywords = [
    "git",
    "secrets",
    "scanner",
    "rust",
    "pyo3",
]

[lib]
name = "pyrepscan"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "0.7.18"
chrono = "0.4.19"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.10"
parking_lot = "0.12.1"
regex = "1.6.0"

[dependencies.libgit2-sys]
version = "0.13.4"
features = ["https"]

[dependencies.git2]
version = "0.14.4"
features = ["vendored-openssl"]

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
