[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "pyrepscan/*.py",
    "pyrepscan/*.pyi"
]
strip = true

[tool.poetry]
name = "pyrepscan"
version = "0.9.6"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "A Git Repository Secrets Scanner written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pyrepscan"
homepage = "https://github.com/intsights/pyrepscan"
license = "MIT"
keywords = [
    "git",
    "secrets",
    "scanner",
    "rust",
    "pyo3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
gitpython = { git = "https://github.com/gitpython-developers/GitPython" }
wheel = "*"
pytest-runner = "*"
maturin = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--tb=native",
    "--pythonwarnings=all",
]
testpaths = [
    "tests",
]
